--- a/Dockerfile_2010_x86_64
+++ b/Dockerfile_2010_x86_64
@@ -10,6 +10,6 @@ ENV HDF5_VERSION 1.12.1
 
 COPY install_libaec.sh /tmp/install_libaec.sh
 RUN bash /tmp/install_libaec.sh
-COPY install_hdf5_centos.sh /tmp/install_hdf5.sh
-RUN bash /tmp/install_hdf5.sh
+#COPY install_hdf5_centos.sh /tmp/install_hdf5.sh
+#RUN bash /tmp/install_hdf5.sh
 
