--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -36,9 +36,9 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: ./Dockerfile_2010_x86_64
-          platforms: linux/amd64,linux/arm64
+          context: .
+          file: ./Dockerfile_2010_x86_64
+          platforms: linux/amd64
+          #platforms: linux/amd64,linux/arm64
           push: true
-          tags: |
-            ghcr.io/user/app:latest
-            ghcr.io/user/app:1.0.0
+          tags: ghcr.io/user/hdf5_12_on_2010_x86_64:latest
