--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,31 +14,10 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
       -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-     # -
-     #   name: Login to DockerHub
-     #   uses: docker/login-action@v1 
-     #   with:
-     #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-     #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Login to GitHub Container Registry
-        uses: docker/login-action@v1 
+        name: Publish
+        uses: matootie/github-docker@v3.1.0
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile_2010_x86_64
-          platforms: linux/amd64
-          #platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ghcr.io/user/hdf5_12_on_2010_x86_64:latest
+          accessToken: ${{ secrets.GITHUB_TOKEN }}
+          imageName: hdf5_1_12_on_2010_x86_64
+          containerRegistry: true
+          contextName: ./Dockerfile_2010_x86_64
