--- a/Dockerfile_2_28_x86_64
+++ b/Dockerfile_2_28_x86_64
@@ -1,10 +1,10 @@
-FROM quay.io/pypa/manylinux2014_x86_64
+FROM quay.io/pypa/manylinux_2_28_x86_64
 
 ENV HDF5_DIR="/usr/local"
 ENV HDF5_VERSION="1_12_3"
 
 COPY install_libaec.sh /tmp/install_libaec.sh
 RUN bash /tmp/install_libaec.sh
-COPY install_hdf5_centos.sh /tmp/install_hdf5.sh
+COPY install_hdf5_alma.sh /tmp/install_hdf5.sh
 RUN bash /tmp/install_hdf5.sh
 
